Изменения в домашнем задании № 2 после проверки